--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,42 @@
-version: '3'
-
+version: "3.8"
 services:
-  nginx:
-    image: nginx:1.22-alpine
-    ports:
-      - "8008:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./:/code
+  # PHP-FPM Service
   php:
-    build: .
+    image: arijnabli10/laravel:34 # Utilisation de votre image Laravel/PHP
+    environment:
+      - APP_ENV=${APP_ENV}
+      - CONTAINER_ROLE=app
+    working_dir: /var/www
     volumes:
-      - ./:/code
+      - ./:/var/www
+    depends_on:
+      - database
+    expose:
+      - "9000" # PHP-FPM s'exécute par défaut sur le port 9000
+  
+  # Nginx Service
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8000:80" # Nginx servira votre application sur le port 8000
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf  # Utiliser un fichier de configuration Nginx personnalisé
+      - ./:/var/www  # L'application Laravel est servie par Nginx
+    depends_on:
+      - php  # Nginx doit attendre que le conteneur PHP soit prêt
+  
+  # Database Server
+  database:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_DATABASE=validationlaravel22
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - db-data:/var/lib/mysql
+
+volumes:
+  db-data:
