--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,40 @@
-version: '3.8'
 
+
+
+version: '3.8'
 services:
-  web:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: arijnabli10/laravel:34
-    env_file:
-      - .env
-    ports:
-      - "8000:80"
+  
+    environment:
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
+    working_dir: /var/www
     volumes:
-      - .:/var/www/html
-    depends_on:
-      - db
+      - .:/var/www
+      - ./docker-compose/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    networks:
+      - app-network
+
+  webserver:
+    image: nginx:alpine
+    container_name: nginx-webserver
+    restart: unless-stopped
+    ports:
+      - "8080:80"
+    volumes:
+      - .:/var/www
+      - ./docker-compose/nginx:/etc/nginx/conf.d/
+    networks:
+      - app-network
 
   db:
-    platform: "linux/amd64"
     image: mysql:5.7
+    container_name: mysql
+    restart: unless-stopped
     environment:
       MYSQL_DATABASE: validationlaravel22
       MYSQL_USER: root
@@ -24,6 +44,13 @@ services:
       - "3306:3306"
     volumes:
       - dbdata:/var/lib/mysql
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   dbdata:
+    driver: local
