--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-
-
-
 version: '3.8'
 services:
   app:
@@ -8,7 +5,6 @@ services:
       context: .
       dockerfile: Dockerfile
     image: arijnabli10/laravel:38
-  
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
@@ -21,7 +17,7 @@ services:
 
   webserver:
     image: nginx:alpine
-    container_name: nginx-webserver
+    container_name: nginx-webserver-dev
     restart: unless-stopped
     ports:
       - "8081:80"
@@ -33,7 +29,7 @@ services:
 
   db:
     image: mysql:5.7
-    container_name: mysql
+    container_name: mysql-dev
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: validationlaravel22
