--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   app:
     build:
@@ -20,7 +21,7 @@ services:
     container_name: nginx-webserver-dev
     restart: unless-stopped
     ports:
-      - "8081:80"
+      - "8080:80"
     volumes:
       - .:/var/www
       - ./docker-compose/nginx:/etc/nginx/conf.d/
@@ -34,8 +35,8 @@ services:
     environment:
       MYSQL_DATABASE: validationlaravel22
       MYSQL_USER: root
-      MYSQL_PASSWORD: ""
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_PASSWORD: ""  # Gardez ça vide pour le moment, mais pensez à créer un utilisateur avec mot de passe.
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"  # Autorise un mot de passe vide
     ports:
       - "3306:3306"
     volumes:
