--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,44 @@
-version: '3.8'
 
-services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
     image: arijnabli10/laravel:38
+    container_name: app
+    restart: unless-stopped
+    tty: true
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
     working_dir: /var/www
-    volumes:
-      - .:/var/www
-      - ./docker-compose/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
 
+  #Nginx Service
   webserver:
     image: nginx:alpine
-    container_name: nginx-webserver-dev
+    container_name: webserver
     restart: unless-stopped
+    tty: true
     ports:
-      - "8080:80"
-    volumes:
-      - .:/var/www
-      - ./docker-compose/nginx:/etc/nginx/conf.d/
+      - "80:80"
+      - "443:443"
     networks:
       - app-network
 
+  #MySQL Service
   db:
-    image: mysql:5.7
-    container_name: mysql-dev
+    image: mysql:5.7.22
+    container_name: 127.0.0.1
     restart: unless-stopped
-    environment:
-      MYSQL_DATABASE: validationlaravel22
-      MYSQL_USER: root
-      MYSQL_PASSWORD: ""  # Gardez ça vide pour le moment, mais pensez à créer un utilisateur avec mot de passe.
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"  # Autorise un mot de passe vide
+    tty: true
     ports:
       - "3306:3306"
-    volumes:
-      - dbdata:/var/lib/mysql
+    environment:
+      MYSQL_DATABASE: ValidationLaravel22
+      MYSQL_ROOT_PASSWORD: 
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
     networks:
       - app-network
 
-networks:
-  app-network:
-    driver: bridge
-
-volumes:
-  dbdata:
-    driver: local
