--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,23 +1,20 @@
 server {
     listen 80;
-    server_name localhost;
-
-    root /var/www/html/public;  # Ensure this is the path to your Laravel public directory
-
-    index index.php index.html index.htm;
-
+    index index.php index.html;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    root /var/www/public;
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
     location / {
         try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass laravel-app:9000;  # Ensure this points to your Laravel app service and port
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    location ~ /\.ht {
-        deny all;
+        gzip_static on;
     }
 }
