--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
     server_name localhost;
-    root /var/www/app/public;
+
+    root /var/www/html/public;  # Ensure this is the path to your Laravel public directory
 
     index index.php index.html index.htm;
 
@@ -11,11 +12,12 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass php:9000;
+        fastcgi_pass laravel-app:9000;  # Ensure this points to your Laravel app service and port
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    location ~ /\.ht {
+        deny all;
+    }
 }
