--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:Hi6s/qidzAjrdrEdHsH/20dsxJf7OFz4oBr/jSoKiI0=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -24,7 +24,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ValidationLaravel22
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
 
 SESSION_DRIVER=file
