--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,39 @@
-
-
-
-
-version: '3.8'
-
+version: "3.8"
 services:
-  app:
-    image: arijnabli10/laravel:10  # Pull from Docker Hub
-    container_name: laravel-app
-    volumes:
-      - ./:/var/www/html
-    networks:
-      - laravel-network
-    depends_on:
-      - db
-    ports:
-      - "8000:80"
-    environment:
-      DB_CONNECTION: mysql
-      DB_HOST: db
-      DB_PORT: 3306
-      DB_DATABASE: ValidationLaravel22
-      DB_USERNAME: root
-      DB_PASSWORD: 
-      APP_URL: http://localhost/
-
-
-  db:
-    image: mysql:5.7
-    container_name: mysql
-    restart: always
-    volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      MYSQL_DATABASE: ValidationLaravel22
-      MYSQL_ROOT_PASSWORD: root
-    networks:
-      - laravel-network
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_server
-    restart: always
-    ports:
-      - "80:80"
-    volumes:
-      - ./:/var/www/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - db
-    networks:
-      - laravel-network
-
+    api:
+        container_name: api
+        build:
+            image: arijnabli10/laravel:11
+            target: php
+            args:
+                - APP_ENV=${APP_ENV}
+        environment:
+            - APP_ENV=${APP_ENV}
+        working_dir: /var/www
+        volumes:
+            - ./:/var/www
+        ports:
+            - 9000:8080
+        depends_on:
+            - database
+            - redis
+    database:
+        container_name: database
+        image: mysql:8.0
+        ports:
+            -   3306:3306
+        environment:
+            - MYSQL_DATABASE=default
+            - MYSQL_USER=ValidationLaravel22
+            - MYSQL_PASSWORD=secret
+            - MYSQL_ROOT_PASSWORD=secret
+        volumes:
+            - db-data:/var/lib/mysql
+    redis:
+        container_name:  redis
+        image: redis:alpine
+        command: redis-server --appendonly yes --requirepass  "secret"
+        ports:
+            - 6380:6379
 volumes:
-  db_data:
-
-networks:
-  laravel-network:
-    driver: bridge
+    db-data: ~
