--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     api:
         container_name: api
         build:
-            image: arijnabli10/laravel:11
+            image: arijnabli10/projet-laravel:28
             target: php
             args:
                 - APP_ENV=${APP_ENV}
